Stegtilstand fra grønn, gul rød til oppfylt, ikke oppfylt og manuell behandling. Standardiser enums til å være SCREAMING_SNAKE_CASE
